M10.5 — JavaScript runs, and a thrown error squiggles its own line
JsHost.runAsync/run/stop over RhinoExecutor: a fresh scope per run, console/print/
readLine/prompt/Java.type as host functions (no prelude, so every reported line is
the file's), Node-style value formatting, the instruction observer as the kill
switch, RhinoOrigin for the console stamp, RhinoStackFrameFilter for the links,
and runtime failures reaching the document through a new engine-neutral lane on
AnalysedLanguageServices (reportRuntimeProblems / attachedTo).

Four things the sketch got wrong, each found by running it and recorded in
plan_m10.md "10.5 as built": the stop names its thread and rides a per-run flag
as well as the interrupt; the application loader is the host's plus org.mozilla
from the band, because Rhino refuses one that cannot resolve itself and the
child would define its own copy of every host class; a Class handed to a script
must be wrapped as NativeJavaClass; and a stopped run ends in
InterruptedException at the bridge, since the child cannot name the shell's
exception. snapshotScope moves to 10.6, beside its only consumer.

725 language tests, 0 failures. Main.js in the harness gains its 10.5 sections.